Create main page

--- a/src/template.html
+++ b/src/template.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-    <h1>Html file is working !</h1>
+    <header>BATTLESHIP</header>
+    <main>
+      <div class="board-container">
+        <div id="first-board-area" class="board-area">
+          <div class="player-title" id="first-player-name">Player 1</div>
+          <div class="gameboard" id="first-board"></div>
+          <div class="health-details" id="first-player-health">
+            100 &hearts;
+          </div>
+        </div>
+        <div id="second-board-area" class="board-area">
+          <div class="player-title" id="second-player-name">Player 2</div>
+          <div class="gameboard" id="second-board"></div>
+          <div class="health-details" id="second-player-health">
+            94 &hearts;
+          </div>
+        </div>
+      </div>
+
+      <div class="events-container">
+        <p>Events</p>
+      </div>
+    </main>
+
+    <footer>
+      Made with ❤️ by Shivam Bansal
+      <a href="https://github.com/shivam-bansal1" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </footer>
   </body>
 </html>
