Update main page color schema

--- a/src/template.html
+++ b/src/template.html
@@ -14,14 +14,14 @@
     <main>
       <div class="board-container">
         <div id="first-board-area" class="board-area">
-          <div class="player-title" id="first-player-name">Player 1</div>
+          <div class="player-title" id="first-player-name">Player</div>
           <div class="gameboard" id="first-board"></div>
           <div class="health-details" id="first-player-health">
             100 &hearts;
           </div>
         </div>
         <div id="second-board-area" class="board-area">
-          <div class="player-title" id="second-player-name">Player 2</div>
+          <div class="player-title" id="second-player-name">Computer</div>
           <div class="gameboard" id="second-board"></div>
           <div class="health-details" id="second-player-health">
             94 &hearts;
