feat: Update player's remaining health

--- a/src/template.html
+++ b/src/template.html
@@ -17,14 +17,14 @@
           <div class="player-title" id="first-player-name">Player</div>
           <div class="gameboard" id="first-board"></div>
           <div class="health-details" id="first-player-health">
-            100 &hearts;
+            100 <i class="fa-regular fa-heart"></i>
           </div>
         </div>
         <div id="second-board-area" class="board-area">
           <div class="player-title" id="second-player-name">Computer</div>
           <div class="gameboard" id="second-board"></div>
           <div class="health-details" id="second-player-health">
-            94 &hearts;
+            100 <i class="fa-regular fa-heart"></i>
           </div>
         </div>
       </div>
