Create events box

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,23 @@
       </div>
 
       <div class="events-container">
-        <p>Events</p>
+        <label for="events">Events</label>
+        <div class="event-log">
+          <div class="event">
+            <p class="turn">1</p>
+            <p class="event-description">
+              Player 1 misses Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Perferendis, quaerat? Eligendi vitae qui
+            </p>
+          </div>
+          <div class="event">
+            <p class="turn">2</p>
+            <p class="event-description">
+              Player 2 misses Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Perferendis, quaerat? Eligendi vitae qui
+            </p>
+          </div>
+        </div>
       </div>
     </main>
 
