feat: Show game event logs

--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
       <div class="events-container">
         <label for="events">Events</label>
         <div class="event-log">
-          <div class="event">
+          <!-- <div class="event">
             <p class="turn">1</p>
             <p class="event-description">
               Player 1 misses Lorem ipsum dolor sit amet consectetur,
@@ -45,7 +45,7 @@
               Player 2 misses Lorem ipsum dolor sit amet consectetur,
               adipisicing elit. Perferendis, quaerat? Eligendi vitae qui
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
