feat: add dialog box to display winner at game end

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,25 @@
         <label for="events">Events</label>
         <div class="event-log"></div>
       </div>
+      <dialog id="game-over-dailog">
+        <div class="game-over-dailog-div">
+          <div class="game-over-divs">
+            <p class="winner heading">Winner</p>
+            <p class="winner value"></p>
+          </div>
+          <div class="game-over-divs">
+            <p class="winner-moves heading">Winner Moves</p>
+            <p class="winner-moves value"></p>
+          </div>
+          <div class="game-over-divs">
+            <p class="loser-moves heading">Loser Moves</p>
+            <p class="loser-moves value"></p>
+          </div>
+          <div class="game-over-divs">
+            <button id="new-game-button">New Game</button>
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <footer>
