feat: Display Player Name

--- a/src/template.html
+++ b/src/template.html
@@ -46,6 +46,9 @@
               <div id="start-dialog-board" class="gameboard"></div>
             </div>
             <div id="ship-wrapper">
+              <div class="player-info">
+                <input type="text" id="player-name" placeholder="Player Name" />
+              </div>
               <div class="orientation">
                 <p>Vertical</p>
                 <input type="checkbox" id="orientation-check" />
